--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,11 +3,11 @@
     <a routerLink="/builds" routerLinkActive="active">Builds</a>
   </div>
   <div class="navbar-item">
+    <a routerLink="/projects" routerLinkActive="active">Projects</a>
+  </div>
+  <div class="navbar-item">
     <a routerLink="/runners" routerLinkActive="active">Runners</a>
   </div>
   <a class="button button-primary navbar-item" routerLink="/login" routerLinkActive="active">Login</a>
 </nav>
-<section class="header">
-  <h2>Testo</h2>
-</section>
 <router-outlet></router-outlet>
